Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-32563

QSerialPortInfo: aren't listing the serial ports for Freescale iMX Linux platform

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • None
    • 4.8.5, 5.1.0
    • Serial Port
    • None
    • Embedded Linux Freescale iMX (without libudev)

    Description

      The serial ports on Embedded Freescale iMX platform (Driver for Motorola IMX serial ports) have names "/dev/ttymxcN":

      http://lxr.free-electrons.com/source/drivers/serial/imx.c?v=2.6.31

      But the current internal realization of QSerialPortInfo has no item the "ttymxc*" in filters list.

      Note: Linux shouldn't have libudev library.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lpapp Laszlo Papp
            kuzulis Denis Shienkov
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes