Linux: Added enumeration of Motorola IMX serial ports

For Embedded "Freescale i.MX Linux" platform is added the filter for the
Motorola IMX serial ports.

These serial ports has names like "/dev/ttymxc*", see kernel sources:
* http://lxr.free-electrons.com/source/drivers/serial/imx.c?v=2.6.31

Task-number: QTBUG-32563

Change-Id: I97b33cdbc8f1a8ff72a171e52ddc10cc0f53b4a2
Reviewed-by: Laszlo Papp <lpapp@kde.org>
Reviewed-by: Sergey Belyashov <Sergey.Belyashov@gmail.com>