src/serialport/qserialportinfo_unix.cpp
@@ -77,6 +77,7 @@ static inline const QStringList& filtersOfDevices()
     << QLatin1String("ttyACM*")  // CDC_ACM converters (i.e. Mobile Phones).
     << QLatin1String("ttyGS*")   // Gadget serial device (i.e. Mobile Phones with gadget serial driver).
     << QLatin1String("ttyMI*")   // MOXA pci/serial converters.
+    << QLatin1String("ttymxc*")  // Motorola IMX serial ports (i.e. Freescale i.MX).
     << QLatin1String("ttyAMA*")  // AMBA serial device for embedded platform on ARM (i.e. Raspberry Pi).
     << QLatin1String("rfcomm*")  // Bluetooth serial device.
     << QLatin1String("ircomm*"); // IrDA serial device.
